# advent-of-code

./: README.md
2024/: .gitignore  .ocamlformat  README.md  aoc.opam  dune-project
2024/dune.lock/: containers-data.pkg  iter.pkg  lock.dune
2024/lib/: day_01.ml  day_01.mli  day_intf.ml  dune  utils.ml
2024/lib/day_01/: day_01.ml
2024/lib/day_02/: day_02.ml
2024/lib/day_03/: day_03.ml
2024/lib/day_04/: day_04.ml
2024/lib/day_05/: day_05.ml
2024/lib/day_06/: day_06.ml
2024/lib/day_07/: day_07.ml
2024/lib/day_08/: day_08.ml
2024/lib/day_09/: day_09.ml
2024/lib/day_15/: day_15.ml
2024/lib/day_template/: day_xx.ml
2024/test/: dune
2025/: .gitignore  README.md  build.zig.zon
2025/src/01/: main.zig
2025/src/02/: main.zig
2025/src/03/: main.zig
2025/src/04/: main.zig
2025/src/05/: main.zig
2025/src/06/: main.zig
2025/src/07/: main.zig
2025/src/08/: main.zig
